[gd_scene load_steps=12 format=3 uid="uid://bd3yg3l22rlvd"]

[ext_resource type="Script" path="res://Objects/bomb.gd" id="1_8uybv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_jq7qv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_ec8c5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_8gevs"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_p35go"]
[ext_resource type="Script" path="res://Objects/Timer.gd" id="6_3f440"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iulfe"]
bounce = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_t6iex"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hj7on"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eqt61"]
albedo_color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[sub_resource type="SphereMesh" id="SphereMesh_u74ud"]
material = SubResource("StandardMaterial3D_eqt61")

[node name="Bomb" type="RigidBody3D"]
collision_layer = 2
collision_mask = 3
mass = 0.3
physics_material_override = SubResource("PhysicsMaterial_iulfe")
gravity_scale = 0.7
script = ExtResource("1_8uybv")

[node name="Area3D" type="Area3D" parent="."]

[node name="Explosion" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_t6iex")

[node name="bomb_collider" type="CollisionShape3D" parent="." groups=["bomb"]]
shape = SubResource("SphereShape3D_hj7on")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_u74ud")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_jq7qv")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("3_ec8c5")
initial_state = NodePath("Lit")

[node name="Lit" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_8gevs")

[node name="ToExplode" type="Node" parent="StateChart/CompoundState/Lit"]
script = ExtResource("5_p35go")
to = NodePath("../../Explode")
event = &"explode"
delay_in_seconds = "0.0"

[node name="Explode" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_8gevs")

[node name="Defused" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_8gevs")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
script = ExtResource("6_3f440")
timer_wait_time = 10.0

[connection signal="state_physics_processing" from="StateChart/CompoundState/Lit" to="." method="_on_lit_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Explode" to="." method="_on_explode_state_physics_processing"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
